@@ -10,7 +10,7 @@ _logger = logging.getLogger("KeyCommon")
 BASE_PANE_TAB_HEIGHT = 40
 
 (CHAR_ACTION, KEYSYM_ACTION, KEYCODE_ACTION, MODIFIER_ACTION, MACRO_ACTION,
-SCRIPT_ACTION, KEYPRESS_NAME_ACTION) = range(1,8)
+    SCRIPT_ACTION, KEYPRESS_NAME_ACTION) = range(1,8)
 
 # KeyCommon hosts the abstract classes for the various types of Keys.
 # UI-specific keys should be defined in KeyGtk or KeyKDE files.
